...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_title"
            android:text="@={vieModel.title}"
            android:inputType="textPersonName"
...
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_add_date"
            app:layout_constraintTop_toBottomOf="@+id/et_add_title" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{ (v) -> vieModel.click(v)}"
            android:text="@string/btn_add"
...
